# personal_projects

./: README.md
C_C++/Project1/Project1/: Project1.vcxproj
C_C++/Project1/Project1/Debug/: Project1.exe.recipe  Project1.ilk  vc142.idb
C_C++/Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Code Cracking/: search.py
Cypher_Gen/: Cy_Gen.py  Gui_Main.py  Py_Gui_Test.py  Test.py
Cypher_Gen/exe/: Cipher_Gen_v1.py
DES/Crypto_Homework/project1-Apaige3-main/: Conversion.py  DES.py  DES_Simulation.py  FeistelNetwork.py  IP.py  IPinverse.py  KeySchedule.py  README.txt
Java_Basics/Java_Scripts/Project Pineapple/: .project
Java_Basics/Java_Scripts/Project Pineapple/src/: AwesomeJavaprogram.java
PowerShell/: PwrShl_Basic.py
cypher_gen/: .gitignore  CHANGELOG.md  Gui_Test_2.py  README.md  cipher_gen.py  pyproject.toml
cypher_gen/exe/: Cipher_Gen_v1.spec
